tests/cli/snapshots/cli__check__untranslated_short_text.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - untranslated
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.ok"  [untranslated]
  --> ./messages/en.json:3:1
  = note: ("OK") identical in: zh
  = used: (no usages found)

warning: "Common.no"  [untranslated]
  --> ./messages/en.json:4:1
  = note: ("No") identical in: zh
  = used: (no usages found)


✘ 2 problems (0 errors, 2 warnings)

----- stderr -----
