tests/cli/snapshots/cli__check__untranslated_with_usages.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - untranslated
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
warning: "Common.cancel"  [untranslated]
  --> ./messages/en.json:1:1
  = note: ("Cancel") identical in: zh
  = used: (no usages found)

error: "Common.submit"  [untranslated]
  --> ./messages/en.json:1:1
  = note: ("Submit") identical in: zh
  = used: ./src/app.tsx:6:21


✘ 2 problems (1 error, 1 warning)

----- stderr -----
