tests/cli/snapshots/cli__check__unused_key.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.unused"  unused-key
  --> ./messages/en.json:1:1
  = note: ("Unused Button")


✘ 1 problems (0 errors, 1 warning)

----- stderr -----
