tests/cli/snapshots/cli__check__verbose_shows_config_source.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - "--verbose"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 1 locale file - no issues found

----- stderr -----
